Fixing broken CSS file which was missing a '}' causing the styling not to render in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,9 +45,11 @@
 
 
 /*-------------------------------------Books List ID */
+
 .book-list {
     margin-top: 50px;
     visibility: hidden;
+}
 
 /*-------------------------------------Styling */
 
@@ -55,7 +57,7 @@
     padding-top: 150px;
 }
 
-#book-find {
+.book-find {
     font-size: 60px;
     color: white;
     text-align: center;
